// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the UIText component should accept additional props 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      accessible={false}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "System",
          "fontSize": 14,
          "fontStyle": null,
          "fontWeight": null,
          "lineHeight": 20.16,
        }
      }
    >
      "You are the only Bible some unbelievers will ever read." – John MacArthur
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`the UIText component should accept and render passed in styles 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "salmon",
          "fontFamily": "System",
          "fontSize": 14,
          "fontStyle": null,
          "fontWeight": null,
          "lineHeight": 20.16,
        }
      }
    >
      Salmon text
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`the UIText component should render a loading state 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "backgroundColor": "#A5A5A5",
          "borderRadius": 16,
          "height": 14,
          "marginVertical": 3.08,
          "width": "40%",
        }
      }
    />
  </View>
</RCTSafeAreaView>
`;

exports[`the UIText component should render as bold 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      bold={true}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "System",
          "fontSize": 14,
          "fontStyle": null,
          "fontWeight": "700",
          "lineHeight": 20.16,
        }
      }
    >
      Bold UIText text
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`the UIText component should render as bold italic 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      bold={true}
      italic={true}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "System",
          "fontSize": 14,
          "fontStyle": "italic",
          "fontWeight": "700",
          "lineHeight": 20.16,
        }
      }
    >
      Bold italic UIText text
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`the UIText component should render as italic 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      italic={true}
      style={
        Object {
          "color": "#303030",
          "fontFamily": "System",
          "fontSize": 14,
          "fontStyle": "italic",
          "fontWeight": null,
          "lineHeight": 20.16,
        }
      }
    >
      Italic UIText text
    </Text>
  </View>
</RCTSafeAreaView>
`;

exports[`the UIText component should render correctly 1`] = `
<RCTSafeAreaView
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <Text
      style={
        Object {
          "color": "#303030",
          "fontFamily": "System",
          "fontSize": 14,
          "fontStyle": null,
          "fontWeight": null,
          "lineHeight": 20.16,
        }
      }
    >
      Default UIText text
    </Text>
  </View>
</RCTSafeAreaView>
`;
